Fixed error with functions I had not written yet being called